[gd_scene load_steps=2 format=3 uid="uid://dtbed3y3qlxom"]

[ext_resource type="Script" uid="uid://b5dcks207agnn" path="res://GUI/HUD.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="BG1" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 414.0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="BG2" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 414.0
offset_right = 1024.0
offset_bottom = 421.0
color = Color(0.521569, 0.521569, 0.521569, 1)

[node name="BG3" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 28.0
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="Money" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 81.0
offset_bottom = 29.0
text = "Money: $40"

[node name="Workers" type="Label" parent="."]
layout_mode = 0
offset_left = 833.0
offset_top = 9.0
offset_right = 908.0
offset_bottom = 33.0
text = "Workers: 1"

[node name="Supplies" type="Label" parent="."]
layout_mode = 0
offset_left = 937.0
offset_top = 7.0
offset_right = 1015.0
offset_bottom = 31.0
text = "Supplies: 25"

[node name="TabBar" type="Control" parent="."]
anchors_preset = 0

[node name="Info" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Owned" type="Label" parent="TabBar/Info"]
layout_mode = 0
offset_left = 376.0
offset_top = 26.0
offset_right = 456.0
offset_bottom = 49.0
text = "Owned:"

[node name="NetWorth" type="Label" parent="TabBar/Info"]
layout_mode = 0
offset_left = 374.0
offset_top = 83.0
offset_right = 454.0
offset_bottom = 106.0
text = "Net Worth:"

[node name="InfoLabel" type="Label" parent="TabBar/Info"]
layout_mode = 0
offset_left = 18.0
offset_top = 16.0
offset_right = 62.0
offset_bottom = 47.0
scale = Vector2(2, 2)
text = "Info:
"

[node name="Land" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Button" type="Button" parent="TabBar/Land"]
layout_mode = 0
offset_left = 468.0
offset_top = 19.0
offset_right = 577.0
offset_bottom = 51.0
text = "Buy"

[node name="Label" type="Label" parent="TabBar/Land"]
layout_mode = 0
offset_left = 376.0
offset_top = 26.0
offset_right = 456.0
offset_bottom = 49.0
text = "Price: $2000"

[node name="SaleHouse" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Button" type="Button" parent="TabBar/SaleHouse"]
layout_mode = 0
offset_left = 468.0
offset_top = 19.0
offset_right = 577.0
offset_bottom = 51.0
text = "Buy"

[node name="Label" type="Label" parent="TabBar/SaleHouse"]
layout_mode = 0
offset_left = 376.0
offset_top = 26.0
offset_right = 456.0
offset_bottom = 49.0
text = "Price: $5,000"

[node name="House" type="Control" parent="TabBar"]
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Button" type="Button" parent="TabBar/House"]
layout_mode = 0
offset_left = 468.0
offset_top = 19.0
offset_right = 577.0
offset_bottom = 51.0
text = "Sell"

[node name="Label" type="Label" parent="TabBar/House"]
layout_mode = 0
offset_left = 376.0
offset_top = 26.0
offset_right = 456.0
offset_bottom = 49.0
text = "Price: $2000"

[node name="Label2" type="Label" parent="TabBar/House"]
layout_mode = 0
offset_left = 93.0
offset_top = 77.0
offset_right = 173.0
offset_bottom = 100.0
text = "Rent"

[node name="Label3" type="Label" parent="TabBar/House"]
layout_mode = 0
offset_left = 773.0
offset_top = 33.0
offset_right = 853.0
offset_bottom = 56.0
text = "Trees"

[node name="Label4" type="Label" parent="TabBar/House"]
layout_mode = 0
offset_left = 773.0
offset_top = 80.0
offset_right = 853.0
offset_bottom = 103.0
text = "walk way"

[node name="Label5" type="Label" parent="TabBar/House"]
layout_mode = 0
offset_left = 775.0
offset_top = 134.0
offset_right = 855.0
offset_bottom = 157.0
text = "Fence"

[node name="ProgressBar" type="ProgressBar" parent="TabBar/House"]
layout_mode = 0
offset_left = 150.0
offset_top = 71.0
offset_right = 320.0
offset_bottom = 103.0

[node name="Button2" type="Button" parent="TabBar/House"]
layout_mode = 0
offset_left = 868.0
offset_top = 25.0
offset_right = 978.0
offset_bottom = 64.0
text = "Upgrade1"

[node name="Button3" type="Button" parent="TabBar/House"]
layout_mode = 0
offset_left = 869.0
offset_top = 76.0
offset_right = 979.0
offset_bottom = 115.0
text = "Upgrade2"

[node name="Button4" type="Button" parent="TabBar/House"]
layout_mode = 0
offset_left = 867.0
offset_top = 127.0
offset_right = 977.0
offset_bottom = 166.0
text = "Upgrade3"

[node name="SuppliesTab" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Label3" type="Label" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 258.0
offset_top = 26.0
offset_right = 338.0
offset_bottom = 49.0
text = "25   $100"

[node name="Label6" type="Label" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 32.0
offset_top = 20.0
offset_right = 112.0
offset_bottom = 43.0
scale = Vector2(2, 2)
text = "Supplies:"

[node name="Label4" type="Label" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 258.0
offset_top = 73.0
offset_right = 338.0
offset_bottom = 96.0
text = "50 $200"

[node name="Label5" type="Label" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 260.0
offset_top = 127.0
offset_right = 340.0
offset_bottom = 150.0
text = "75 $300"

[node name="Button2" type="Button" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 385.0
offset_top = 14.0
offset_right = 495.0
offset_bottom = 53.0
text = "Buy"

[node name="Button3" type="Button" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 386.0
offset_top = 65.0
offset_right = 496.0
offset_bottom = 104.0
text = "Buy"

[node name="Button4" type="Button" parent="TabBar/SuppliesTab"]
layout_mode = 0
offset_left = 384.0
offset_top = 116.0
offset_right = 494.0
offset_bottom = 155.0
text = "Buy"

[node name="WorkersTab" type="Control" parent="TabBar"]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 414.0
offset_right = 1.0
offset_bottom = 414.0

[node name="Label3" type="Label" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 258.0
offset_top = 26.0
offset_right = 338.0
offset_bottom = 49.0
text = "1   $100"

[node name="Label6" type="Label" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 32.0
offset_top = 20.0
offset_right = 112.0
offset_bottom = 43.0
scale = Vector2(2, 2)
text = "Workers:"

[node name="Label4" type="Label" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 258.0
offset_top = 73.0
offset_right = 338.0
offset_bottom = 96.0
text = "2 $200"

[node name="Label5" type="Label" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 260.0
offset_top = 127.0
offset_right = 340.0
offset_bottom = 150.0
text = "3 $300"

[node name="Button2" type="Button" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 385.0
offset_top = 14.0
offset_right = 495.0
offset_bottom = 53.0
text = "Buy"

[node name="Button3" type="Button" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 386.0
offset_top = 65.0
offset_right = 496.0
offset_bottom = 104.0
text = "Buy"

[node name="Button4" type="Button" parent="TabBar/WorkersTab"]
layout_mode = 0
offset_left = 384.0
offset_top = 116.0
offset_right = 494.0
offset_bottom = 155.0
text = "Buy"

[node name="TabSelector" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Info" type="Button" parent="TabSelector"]
layout_mode = 0
offset_left = -2.0
offset_top = 388.0
offset_right = 75.0
offset_bottom = 414.0
text = "Info"

[node name="Workers" type="Button" parent="TabSelector"]
layout_mode = 0
offset_left = 77.0
offset_top = 388.0
offset_right = 154.0
offset_bottom = 414.0
text = "Workers"

[node name="Suplioes" type="Button" parent="TabSelector"]
layout_mode = 0
offset_left = 156.0
offset_top = 388.0
offset_right = 233.0
offset_bottom = 414.0
text = "Supplies"

[connection signal="pressed" from="TabBar/Land/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TabBar/SaleHouse/Button" to="." method="_on_Button_pressed1"]
[connection signal="pressed" from="TabBar/House/Button" to="." method="_on_Button_pressed2"]
[connection signal="pressed" from="TabBar/House/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TabBar/House/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TabBar/House/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TabBar/SuppliesTab/Button2" to="." method="_on_Button2_pressedsup1"]
[connection signal="pressed" from="TabBar/SuppliesTab/Button3" to="." method="_on_Button3_pressedsup2"]
[connection signal="pressed" from="TabBar/SuppliesTab/Button4" to="." method="_on_Button4_pressedsup3"]
[connection signal="pressed" from="TabBar/WorkersTab/Button2" to="." method="_on_Button2_pressed_w1"]
[connection signal="pressed" from="TabBar/WorkersTab/Button3" to="." method="_on_Button3_pressedw2"]
[connection signal="pressed" from="TabBar/WorkersTab/Button4" to="." method="_on_Button4_pressedw3"]
[connection signal="pressed" from="TabSelector/Info" to="." method="_on_Info_pressedTab"]
[connection signal="pressed" from="TabSelector/Workers" to="." method="_on_Workers_pressedTab"]
[connection signal="pressed" from="TabSelector/Suplioes" to="." method="_on_Suplioes_pressedTab"]
